# appsec-advisor-fixtures

./: AGENTS.md  README.md
oracles/aws-terraform-threat-fixture/: README.md  expected-signals.json  verify_threat_model.py
oracles/cross-repo-threat-fixture/: README.md  expected-signals.json  verify_threat_model.py
oracles/go-threat-fixture/: README.md  expected-signals.json
oracles/node-typescript-threat-fixture/: README.md  expected-signals.json
oracles/python-langchain-llm-threat-fixture/: README.md  expected-signals.json
oracles/python-threat-fixture/: README.md  expected-signals.json  verify_threat_model.py
oracles/rust-threat-fixture/: README.md  expected-signals.json
oracles/spring-boot-threat-fixture/: README.md  (+1 more)
repos/python-langchain-llm-threat-fixture/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
repos/python-langchain-llm-threat-fixture/.github/workflows/: ci.yml
repos/python-langchain-llm-threat-fixture/app/: __init__.py  main.py
repos/python-langchain-llm-threat-fixture/app/static/: app.js
repos/python-langchain-llm-threat-fixture/deploy/kubernetes/: deployment.yaml
repos/python-langchain-llm-threat-fixture/docs/: architecture.md
repos/rust-threat-fixture/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
repos/rust-threat-fixture/.github/workflows/: ci.yml
repos/rust-threat-fixture/deploy/kubernetes/: deployment.yaml
repos/rust-threat-fixture/docs/: architecture.md
repos/rust-threat-fixture/src/: main.rs
repos/rust-threat-fixture/static/: app.js
(+72 files in other folders)
