[package]
name = "rust-threat-fixture"
version = "0.1.0"
edition = "2021"
description = "Intentionally vulnerable Axum fixture for AppSec Advisor testing"

[dependencies]
axum = "0.7"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
